# Meta-hackathon

./: .gitignore  Dockerfile  LexEnv_Implementation_Guide.md  PROJECT_EXPLANATION.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  walkthrough.md
frontend/: index.html  script.js  style.css
lexenv/: __init__.py  env.py  graders.py  llm_grader.py  models.py
lexenv/data/: __init__.py  contracts.py
server/: __init__.py  app.py
